frontend/src/pages/ExpertOpinion.css
.expert-opinion-container {
  padding: 20px;
  border-radius: 8px;
  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
}

.view-collection-button {
  margin-top: 20px;
  margin-bottom: 20px;
}

.section-title {
  font-size: 24px;
  margin-bottom: 20px;
  color: #333;
  border-bottom: 2px solid #ddd;
  padding-bottom: 10px;
}

.section-container {
  background-color: #f9f9f9;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin-bottom: 20px;
  padding: 20px;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal-form {
  width: 80%;
  height: 80%;
  background-color: white;
  overflow-y: auto;
  padding: 20px;
  border-radius: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.modal-title {
  font-size: 24px;
  margin-bottom: 10px;
  margin-top: 10px;
}

.modal-image {
  width: 100%;
}

.bird-selection {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.bird-card {
  width: 30%;
  display: inline-block;
  text-align: center;
}

.bird-image {
  width: 90%;
}

.bird-button {
  padding: 10px;
  margin-top: 10px;
  border: none;
  cursor: pointer;
}

.bird-button.selected {
  background-color: lightblue;
}

.modal-button {
  margin-top: 20px;
  margin-right: 10px;
}

